fix carousel vertical shift

--- a/assets/css/component/slide.css
+++ b/assets/css/component/slide.css
@@ -75,7 +75,11 @@
         right: 0;
         bottom: 0;
         background: var(--bg);
-        width: unset;
+        width: 100%;
+    }
+
+    aside .carousel__viewport {
+        height: calc(100% - 3.7rem);
     }
 
     .carousel__viewport__slide > .carousel__nav {
@@ -101,19 +105,21 @@
     .carousel__viewport__slide__cover img {
         position: absolute;
         left: 0;
+        border-radius: 1ex;
+        padding: 1rem;
         max-width: 100%;
-        height: calc(100% - 3rem);
+        height: 100%;
     }
 
     .carousel__viewport__slide__content {
-        padding: 0 1rem 5rem;
+        padding: 1rem 2rem;
         max-height: unset;
     }
 
     .carousel__viewport__slide__cover + .carousel__viewport__slide__content {
         flex: unset;
         z-index: 0;
-        margin: 1rem 1rem 4rem;
+        margin: 1rem 2rem 2rem;
         border-radius: 1ex;
         background: var(--bg);
         padding: 1rem;
@@ -131,8 +137,8 @@
     }
 
     .carousel__nav > ul.rounded {
-        padding: 1ex 0;
-        width: calc(100vw - 2rem);
+        padding: 1ex;
+        width: 100%;
         text-align: right;
     }
 
