--- a/assets/css/layout/_default/home.css
+++ b/assets/css/layout/_default/home.css
@@ -82,8 +82,7 @@ hr.ldots {
 
     body > aside.carousel {
         float: unset;
-        margin: 0 1rem;
-        padding: 1rem 0;
+        padding: 0;
         width: unset;
     }
 
